2005-05-28  Conrad T. Pino  <Conrad@Pino.com>

	* run.c: Implement functions "run_add_arg_p" and "run_arg_free_p" by
	copying from "../src/run.c" and change all K&R style function argument
	declarations to ANSI style.

2005-05-26  Derek Price  <derek@ximbiot.com>

	* pwd.h, pwd.c: Reformat to CVS conventions.

2005-05-26  Derek Price  <derek@ximbiot.com>

	* ndir.h, ndir.c: Reformatting to CVS conventions.

2005-05-26  Conrad T. Pino  <Conrad@Pino.com>

	* filesubr.c: Remove "wnt_lstat" function.  Collapse static function
	"check_statbuf" logic into "wnt_stat" function body.

2005-05-26  Conrad T. Pino  <Conrad@Pino.com>

	* config.h, config.h.in, stamp-chi: Regenerated on Solaris for updates
	to config.h.in.footer and config.h.in.in committed on Windows.

2005-05-26  Conrad T. Pino  <Conrad@Pino.com>

	* config.h.in.footer: Reorganize into 3 sections (macros, typedefs and
	function prototypes) and alphabetize each section.  Synchronize with
	GNULib import so Windows build succeeds.
	* config.h.in.in: Synchronize with GNULib import so Windows build
	succeeds.
	* unistd.h: Include standard function prototypes from Microsoft files
	to decrease warnings in GNULib import.

2005-05-25  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (_POSIX_PTHREAD_SEMANTICS): Undef on Windows.

2005-05-25  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (MISSING_SYS_CDEFS_H): Guess this should be defined.

2005-05-23  Derek Price  <derek@ximbiot.com>

	* filesubr.c (xresolvepath): Remove this function.

2005-05-17  Conrad T. Pino  <Conrad@Pino.com>

	* pwd.c, pwd.h: Add "const" modifier to "getpwnam" & "getgrnam" function
	"char *" argument to elminate warning in "../lib/glob.c" module.

2005-05-02  Derek Price  <derek@ximbiot.com>

	* config.h.in.in: Define LOCK_COMPATIBILITY.

2005-04-25  Mark D. Baushke  <mdb@cvshome.org>

	* config.h.in.in: Syncronize with ../config.h.in file.
	Added: #undef HAVE_DECL_MEMRCHR, #undef HAVE_PAM_PAM_APPL_H,
	#undef HAVE_SECURITY_PAM_APPL_H